--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -7,8 +7,11 @@ We are pleased to announce the Alpha edition of the Open Programmable
 Infrastructure (OPI) event that will be held virtually on March 15th and March
 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the
 various community efforts underway to make infrastructure fully programmable
-across software and hardware devices such as IPUs, DPUs, or switches. The event
-schedule and speaker list is provided below.
+across software and hardware devices such as IPUs, DPUs, or switches.
+
+You can add the events to your calendar [here](/opievents.ics).
+
+The event schedule and speaker list is provided below.
 
 OPI Event - Day 1
 Time: Mar 15, 2022 08:00 AM Pacific Time
