change PST to Pacific since after change to PDT
Signed-off-by: Paul Pindell <ppindell@gmail.com>

--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -5,7 +5,7 @@ date: 2022-02-22T14:45:30-06:00
 
 We are pleased to announce the Alpha edition of the Open Programmable
 Infrastructure (OPI) event that will be held virtually on March 15th and March
-16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the
+16th, 2022 from 8am-1:30pm Pacific Time. This is an exciting opportunity to share in the
 various community efforts underway to make infrastructure fully programmable
 across software and hardware devices such as IPUs, DPUs, or switches.
 
