event: Add Keysite presenter name
Add Chris Sommers as Keysite presenter.

Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -111,7 +111,7 @@ tbody tr:nth-child(even) {
 | 2   | IBM | Coming soon | Coming soon |
 | 2   | Ericson | Coming soon | Coming soon |
 | 2   | Tom Nadeau, Spirent | The Importance of Testing In Your Open Source Infrastructure Project | Join Tom as he discusses why testing is important in your Open Source project, and how it can better enable programmable infrastructure. |
-| 2   | Keysight | Coming soon | Coming soon |
+| 2   | Chris Sommers, Keysight | Coming soon | Coming soon |
 | 2   | Red Hat | Coming soon | Coming soon |
 | 2   | Breakout Session 1: Marvell and Intel | Target Abstraction Composition | Coming soon |
 | 2   | Breakout Session 2: F5 | Application Abstraction Composition | Coming soon |
