--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -100,7 +100,7 @@ tbody tr:nth-child(even) {
 | Day | Speaker | Title | Abstract |
 |-----|---------|-------|----------|
 | 1   | Google | Coming soon | Coming soon |
-| 1   | Dell | Coming soon | Coming soon |
+| 1   | Mark Sanders, Dell | DPU Open API – The need for a Common Interface Framework | DPUs are starting to become mainstream devices in Edge, Cloud, and Data Center environments and unlike the previous generation of accelerators and SmartNICs, DPUs present an opportunity to rethink the traditional deployment architectures.  Multiple vendors are developing a variety of interfaces and frameworks that are highly platform dependent, resulting in the potential for complex and isolated deployments.  Discover the need for a common interface framework for the DPU ecosystem and how a vendor agnostic approach, built on existing industry APIs and new API definitions, simplifies the creation of DPU based solutions. |
 | 1   | Meta | Coming soon | Coming soon |
 | 1   | Lightbits | Coming soon | Coming soon |
 | 1   | Debo Dutta, Nutanix | MLOps Meets Programmable Infrastructure | Coming soon |
@@ -108,12 +108,12 @@ tbody tr:nth-child(even) {
 | 1   | Tim Michels, F5 | DPU Disruption of Today’s Infrastructure Paradigm | Explore with F5 the exciting potential for DPU technology to bring disruptive change to the infrastructure and topology of the data center, private cloud, or edge deployments of the future.  Learn to define what a DPU is, how it can be used to separate infrastructure services from application workloads, and why this is so important.  Hear the call to action to drive this technology into the future by creating an open community engaged in the definition of frameworks and APIs targeting vendor-agnostic interoperability. |
 | 1   | VMware | Coming soon | Coming soon |
 | 1   | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Next Steps in Community Building/Evolution | We will talk about where OPI goes next in terms of it's community governance. |
-| 2   | IBM | Coming soon | Coming soon |
+| 2   | Denis Kennelly and Vinent Hsu, IBM | Keynote | The perfect storm of infrastructure modernization is here. An organization needs to gain the immediate insights of the ever-growing data estates, protect its assets from cyberattack and enable developers to develop solutions more efficiently and globally. The traditional infrastructure can no longer satisfy the new requirements. We need a new intelligent infrastructure that is more elastic, more secure, and more efficient. Developers can now leverage DPU/IPU/SmartNic technology to modernize its infrastructure – compute, network and storage. In this session, IBM will present its vision of infrastructure evolution and the possible applications and services that can take advantage of this technology. |
 | 2   | Ericson | Coming soon | Coming soon |
 | 2   | Tom Nadeau, Spirent | The Importance of Testing In Your Open Source Infrastructure Project | Join Tom as he discusses why testing is important in your Open Source project, and how it can better enable programmable infrastructure. |
 | 2   | Chris Sommers, Keysight | Coming soon | Coming soon |
-| 2   | Red Hat | Coming soon | Coming soon |
-| 2   | Breakout Session 1: Marvell and Intel | Target Abstraction Composition | Coming soon |
+| 2   | Kris Murphy and Billy McFall, Red Hat | The Importance of Hybrid Cloud Platforms for Open Programmable Infrastructure | Red Hat believes that DPUs/IPUs will help drive a change in IT infrastructure. These devices offer many potential benefits to our customers. However, adding additional devices with additional compute and the ability to run an independent OS adds complexity to managing the IT infrastructure. In this session Red Hat will discuss how we can be a trusted technology partner that can offer powerful, scalable and fully-open software technologies to complement this new class of hardware. |
+| 2   | Breakout Session 1: Nadav Haklai (Marvell), Liron Himi (Marvell) | Target Abstraction Composition | DPUs are a new class of programmable processors which pose software compatibility challenges on both Silicon vendors and customers.  In this breakout session we learn about Marvell’s vision for vendor agnostic and standardize DPU software for Control, Data path and Life cycle management.  In alignment with this vision, Marvell recently took the challenge to ramp-up OVS offload use case using the P4 based IPDK framework on top of Marvell’s latest OCTEON ARM based DPUs. We will share our experience with this project and future thoughts.  Looking forward, Marvell is committed to contributing to and supporting open community initiatives to ensure the OCTEON DPU cutting-edge technologies are utilized |
 | 2   | Breakout Session 2: F5 | Application Abstraction Composition | Coming soon |
 | 2   | Breakout Session 3: Dell and Red Hat | Lifecycle/APIs/Provisioning Management across DPU/IPU/Switches | Coming soon |
 | 2   | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Closing thoughts | Why is standardization important for the end-users, the 3rd party vendors integrating with these devices, and ultimately for the vendors of these devices. We will touch on this topic and also have a call to action for the community to join with us in this endeavor. |
