--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -97,24 +97,25 @@ tbody tr:nth-child(even) {
 {{< /rawhtml >}}
 
 {{< table "table table-striped table-bordered" >}}
-| Day | Speaker | Title | Abstract |
+| Day/Time | Speaker | Title | Abstract |
 |-----|---------|-------|----------|
-| 1   | Google | Coming soon | Coming soon |
-| 1   | Mark Sanders, Dell | DPU Open API – The need for a Common Interface Framework | DPUs are starting to become mainstream devices in Edge, Cloud, and Data Center environments and unlike the previous generation of accelerators and SmartNICs, DPUs present an opportunity to rethink the traditional deployment architectures.  Multiple vendors are developing a variety of interfaces and frameworks that are highly platform dependent, resulting in the potential for complex and isolated deployments.  Discover the need for a common interface framework for the DPU ecosystem and how a vendor agnostic approach, built on existing industry APIs and new API definitions, simplifies the creation of DPU based solutions. |
-| 1   | Nicolas Viljoen, Meta | Coming soon | Coming soon |
-| 1   | Muli Ben-Yehuda, Lightbits | Coming soon | Coming soon |
-| 1   | Debo Dutta, Nutanix | MLOps Meets Programmable Infrastructure | Coming soon |
-| 1   | Ian Wells, Cisco | How Programmable Infrastructure Can Enable Better Edge Computing | Edge Computing has become a hot topic recently. This talk will level set on what Edge Computing is, and then present a world where programmable infrastructure can make edge computing better. The talk will provide the programmable infrastructure community an oppurtunity to build software for this use case. |
-| 1   | Tim Michels, F5 | DPU Disruption of Today’s Infrastructure Paradigm | Explore with F5 the exciting potential for DPU technology to bring disruptive change to the infrastructure and topology of the data center, private cloud, or edge deployments of the future.  Learn to define what a DPU is, how it can be used to separate infrastructure services from application workloads, and why this is so important.  Hear the call to action to drive this technology into the future by creating an open community engaged in the definition of frameworks and APIs targeting vendor-agnostic interoperability. |
-| 1   | Pere Monclus & Ben Pfaff, VMware | Coming soon | Coming soon |
-| 1   | Kyle Mestery (Intel), Yan Fisher (Red Hat), Paul Pindell (F5) | Next Steps in Community Building/Evolution | We will talk about where OPI goes next in terms of it's community governance. |
-| 2   | Denis Kennelly and Vinent Hsu, IBM | Keynote | The perfect storm of infrastructure modernization is here. An organization needs to gain the immediate insights of the ever-growing data estates, protect its assets from cyberattack and enable developers to develop solutions more efficiently and globally. The traditional infrastructure can no longer satisfy the new requirements. We need a new intelligent infrastructure that is more elastic, more secure, and more efficient. Developers can now leverage DPU/IPU/SmartNic technology to modernize its infrastructure – compute, network and storage. In this session, IBM will present its vision of infrastructure evolution and the possible applications and services that can take advantage of this technology. |
-| 2   | Tomas Fredberg, Ericson | Telco needs of IPDK, Cloud, HW, and SW suppliers | Coming soon |
-| 2   | Tom Nadeau, Spirent | The Importance of Testing In Your Open Source Infrastructure Project | Join Tom as he discusses why testing is important in your Open Source project, and how it can better enable programmable infrastructure. |
-| 2   | Ankur Sheth, Keysight | Coming soon | The networking industry has embraced disaggregation, shift-left and now programmable infrastructure to build & operate web scale networks. This talk covers how programmable test infrastructure can benefit eco-systems and communities that build and operate programmable infrastructure. |
-| 2   | Kris Murphy and Billy McFall, Red Hat | The Importance of Hybrid Cloud Platforms for Open Programmable Infrastructure | Red Hat believes that DPUs/IPUs will help drive a change in IT infrastructure. These devices offer many potential benefits to our customers. However, adding additional devices with additional compute and the ability to run an independent OS adds complexity to managing the IT infrastructure. In this session Red Hat will discuss how we can be a trusted technology partner that can offer powerful, scalable and fully-open software technologies to complement this new class of hardware. |
-| 2   | Breakout Session 1: Nadav Haklai (Marvell), Liron Himi (Marvell) | Target Abstraction Composition | DPUs are a new class of programmable processors which pose software compatibility challenges on both Silicon vendors and customers.  In this breakout session we learn about Marvell’s vision for vendor agnostic and standardize DPU software for Control, Data path and Life cycle management.  In alignment with this vision, Marvell recently took the challenge to ramp-up OVS offload use case using the P4 based IPDK framework on top of Marvell’s latest OCTEON ARM based DPUs. We will share our experience with this project and future thoughts.  Looking forward, Marvell is committed to contributing to and supporting open community initiatives to ensure the OCTEON DPU cutting-edge technologies are utilized |
-| 2   | Breakout Session 2: Joel Moses, F5 | Application Abstraction Composition | Coming soon |
-| 2   | Breakout Session 3: Dell and Red Hat | Lifecycle/APIs/Provisioning Management across DPU/IPU/Switches | Coming soon |
-| 2   | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Closing thoughts | Why is standardization important for the end-users, the 3rd party vendors integrating with these devices, and ultimately for the vendors of these devices. We will touch on this topic and also have a call to action for the community to join with us in this endeavor. |
+| Tue Mar 15, 8:00am-8:15am PDT | Intel | Introduction |  |
+| Tue Mar 15, 8:15am-9:00am PDT | Google | Coming soon | Coming soon |
+| Tue Mar 15, 9:00am-9:30am PDT | Mark Sanders, Dell | DPU Open API – The need for a Common Interface Framework | DPUs are starting to become mainstream devices in Edge, Cloud, and Data Center environments and unlike the previous generation of accelerators and SmartNICs, DPUs present an opportunity to rethink the traditional deployment architectures.  Multiple vendors are developing a variety of interfaces and frameworks that are highly platform dependent, resulting in the potential for complex and isolated deployments.  Discover the need for a common interface framework for the DPU ecosystem and how a vendor agnostic approach, built on existing industry APIs and new API definitions, simplifies the creation of DPU based solutions. |
+| Tue Mar 15, 9:30am-10:00am PDT | Nicolas Viljoen, Meta | Coming soon | Coming soon |
+| Tue Mar 15, 10:00am-10:30am PDT | Muli Ben-Yehuda, Lightbits | Coming soon | Coming soon |
+| Tue Mar 15, 10:45am-11:15am PDT | Debo Dutta, Nutanix | MLOps Meets Programmable Infrastructure | Coming soon |
+| Tue Mar 15, 11:15am-11:45am PDT | Ian Wells, Cisco | How Programmable Infrastructure Can Enable Better Edge Computing | Edge Computing has become a hot topic recently. This talk will level set on what Edge Computing is, and then present a world where programmable infrastructure can make edge computing better. The talk will provide the programmable infrastructure community an opportunity to build software for this use case. |
+| Tue Mar 15, 11:45am-12:15pm PDT | Tim Michels, F5 | DPU Disruption of Today’s Infrastructure Paradigm | Explore with F5 the exciting potential for DPU technology to bring disruptive change to the infrastructure and topology of the data center, private cloud, or edge deployments of the future.  Learn to define what a DPU is, how it can be used to separate infrastructure services from application workloads, and why this is so important.  Hear the call to action to drive this technology into the future by creating an open community engaged in the definition of frameworks and APIs targeting vendor-agnostic interoperability. |
+| Tue Mar 15, 12:30pm-1:00pm PDT | Pere Monclus & Ben Pfaff, VMware | Coming soon | Coming soon |
+| Tue Mar 15, 1:00pm-1:30pm PDT | Kyle Mestery (Intel), Yan Fisher (Red Hat), Paul Pindell (F5) | Next Steps in Community Building/Evolution | We will talk about where OPI goes next in terms of it's community governance. |
+| Wed Mar 16, 8:00am-8:45am PDT | Denis Kennelly and Vinent Hsu, IBM | Keynote | The perfect storm of infrastructure modernization is here. An organization needs to gain the immediate insights of the ever-growing data estates, protect its assets from cyberattack and enable developers to develop solutions more efficiently and globally. The traditional infrastructure can no longer satisfy the new requirements. We need a new intelligent infrastructure that is more elastic, more secure, and more efficient. Developers can now leverage DPU/IPU/SmartNic technology to modernize its infrastructure – compute, network and storage. In this session, IBM will present its vision of infrastructure evolution and the possible applications and services that can take advantage of this technology. |
+| Wed Mar 16, 8:45am-9:15am PDT | Tomas Fredberg, Ericsson | Telco needs of IPDK, Cloud, HW, and SW suppliers | Coming soon |
+| Wed Mar 16, 9:15am-9:30am PDT | Tom Nadeau, Spirent | The Importance of Testing In Your Open Source Infrastructure Project | Join Tom as he discusses why testing is important in your Open Source project, and how it can better enable programmable infrastructure. |
+| Wed Mar 16, 9:30am-9:45am PDT | Ankur Sheth, Keysight | Coming soon | The networking industry has embraced disaggregation, shift-left and now programmable infrastructure to build & operate web scale networks. This talk covers how programmable test infrastructure can benefit eco-systems and communities that build and operate programmable infrastructure. |
+| Wed Mar 16, 9:45am-10:15am PDT | Kris Murphy and Billy McFall, Red Hat | The Importance of Hybrid Cloud Platforms for Open Programmable Infrastructure | Red Hat believes that DPUs/IPUs will help drive a change in IT infrastructure. These devices offer many potential benefits to our customers. However, adding additional devices with supplimental compute cycles and the ability to run an independent OS adds complexity to the management of IT infrastructure. In this session Red Hat will discuss how we can be a trusted technology partner that can offer powerful, scalable and fully-open software technologies to complement this new class of hardware. |
+| Wed Mar 16, 10:30am-11:15am PDT | BoF 1 moderated by: Nadav Haklai (Marvell), Liron Himi (Marvell) | BoF: Target Abstraction Composition | Community discussion on the industry challenges to support programmable target abstractions of increasingly complex hardware and software in an open way. Discuss the APIs, technologies and tools that are in scope to support this evolution. |
+| Wed Mar 16, 11:15am-12:00pm PDT | BoF 2 moderated by: Joel Moses, F5 | BoF: Application Abstraction Composition | Community discussion on the overall system architecture through the lens of cloud, enterprise and Telco applications, which require specific functions and acceleration services from the infrastructure. Discuss the set of applications that need to be in scope and brainstorm on collaboration models to align across the industry. |
+| Wed Mar 16, 12:15pm-1:00pm PDT | BoF 3 moderated by: Dell and Red Hat | BoF: Lifecycle/APIs/Provisioning Management across DPU/IPU/Switches | Community discussion on overall system and platform provisioning, manageability, and lifecycle related requirements, Open APIs and standards, which are necessary to support the consumption and adoption of programmable infrastructure at scale. |
+| Wed Mar 16, 1:00pm-1:30pm PDT | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Closing thoughts | Why is standardization important for the end-users, the 3rd party vendors integrating with these devices, and ultimately for the vendors of these devices. We will touch on this topic and also have a call to action for the community to join with us in this endeavor. |
 {{< /table >}}
