--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -117,5 +117,5 @@ tbody tr:nth-child(even) {
 | Wed Mar 16, 10:30am-11:15am PDT | BoF 1 moderated by: Nadav Haklai (Marvell), Liron Himi (Marvell) | BoF: Target Abstraction Composition | Community discussion on the industry challenges to support programmable target abstractions of increasingly complex hardware and software in an open way. Discuss the APIs, technologies and tools that are in scope to support this evolution. |
 | Wed Mar 16, 11:15am-12:00pm PDT | BoF 2 moderated by: Joel Moses, F5 | BoF: Application Abstraction Composition | Community discussion on the overall system architecture through the lens of cloud, enterprise and Telco applications, which require specific functions and acceleration services from the infrastructure. Discuss the set of applications that need to be in scope and brainstorm on collaboration models to align across the industry. |
 | Wed Mar 16, 12:15pm-1:00pm PDT | BoF 3 moderated by: Dell and Red Hat | BoF: Lifecycle/APIs/Provisioning Management across DPU/IPU/Switches | Community discussion on overall system and platform provisioning, manageability, and lifecycle related requirements, Open APIs and standards, which are necessary to support the consumption and adoption of programmable infrastructure at scale. |
-| Wed Mar 16, 1:00pm-1:30pm PDT | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Closing thoughts | Why are a consistent frameworks and common  APIs important for the end-users, the 3rd party vendors integrating with these devices, and ultimately for the vendors of these devices. We will touch on this topic and also have a call to action for the community to join with us in this endeavor. |
+| Wed Mar 16, 1:00pm-1:30pm PDT | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Closing thoughts | Why are consistent frameworks and common  APIs important for the end-users, the 3rd party vendors integrating with these devices, and ultimately for the vendors of these devices. We will touch on this topic and also have a call to action for the community to join with us in this endeavor. |
 {{< /table >}}
