Another Title update
Signed-off-by: Paul Pindell <ppindell@gmail.com>

--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -112,7 +112,7 @@ tbody tr:nth-child(even) {
 | Wed Mar 16, 8:00am-8:45am PDT | Denis Kennelly and Vinent Hsu, IBM | Keynote | The perfect storm of infrastructure modernization is here. An organization needs to gain the immediate insights of the ever-growing data estates, protect its assets from cyberattack and enable developers to develop solutions more efficiently and globally. The traditional infrastructure can no longer satisfy the new requirements. We need a new intelligent infrastructure that is more elastic, more secure, and more efficient. Developers can now leverage DPU/IPU/SmartNic technology to modernize its infrastructure – compute, network and storage. In this session, IBM will present its vision of infrastructure evolution and the possible applications and services that can take advantage of this technology. |
 | Wed Mar 16, 8:45am-9:15am PDT | Tomas Fredberg, Ericsson | Telco needs of IPDK, Cloud, HW, and SW suppliers | Telco needs of IPDK, Cloud, HW, and SW suppliers |
 | Wed Mar 16, 9:15am-9:30am PDT | Tom Nadeau, Spirent | The Importance of Testing In Your Open Source Infrastructure Project | Join Tom as he discusses why testing is important in your Open Source project, and how it can better enable programmable infrastructure. |
-| Wed Mar 16, 9:30am-9:45am PDT | Ankur Sheth, Keysight | Coming soon | The networking industry has embraced disaggregation, shift-left and now programmable infrastructure to build & operate web scale networks. This talk covers how programmable test infrastructure can benefit eco-systems and communities that build and operate programmable infrastructure. |
+| Wed Mar 16, 9:30am-9:45am PDT | Ankur Sheth, Keysight | Programmable Test Infrastructure for Programmable Infrastructure | The networking industry has embraced disaggregation, shift-left and now programmable infrastructure to build & operate web scale networks. This talk covers how programmable test infrastructure can benefit eco-systems and communities that build and operate programmable infrastructure. |
 | Wed Mar 16, 9:45am-10:15am PDT | Kris Murphy and Billy McFall, Red Hat | The Importance of Hybrid Cloud Platforms for Open Programmable Infrastructure | Red Hat believes that DPUs/IPUs will help drive a change in IT infrastructure. These devices offer many potential benefits to our customers. However, adding additional devices with supplimental compute cycles and the ability to run an independent OS adds complexity to the management of IT infrastructure. In this session Red Hat will discuss how we can be a trusted technology partner that can offer powerful, scalable and fully-open software technologies to complement this new class of hardware. |
 | Wed Mar 16, 10:30am-11:15am PDT | BoF 1 moderated by: Nadav Haklai (Marvell), Liron Himi (Marvell) | BoF: Target Abstraction Composition | Community discussion on the industry challenges to support programmable target abstractions of increasingly complex hardware and software in an open way. Discuss the APIs, technologies and tools that are in scope to support this evolution. |
 | Wed Mar 16, 11:15am-12:00pm PDT | BoF 2 moderated by: Joel Moses, F5 | BoF: Application Abstraction Composition | Community discussion on the overall system architecture through the lens of cloud, enterprise and Telco applications, which require specific functions and acceleration services from the infrastructure. Discuss the set of applications that need to be in scope and brainstorm on collaboration models to align across the industry. |
