More abstracts added
Signed-off-by: Paul Pindell <ppindell@gmail.com>

--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -102,12 +102,12 @@ tbody tr:nth-child(even) {
 | Tue Mar 15, 8:00am-8:15am PDT | Intel | Introduction |  |
 | Tue Mar 15, 8:15am-9:00am PDT | Google | Coming soon | Coming soon |
 | Tue Mar 15, 9:00am-9:30am PDT | Mark Sanders, Dell | DPU Open API – The need for a Common Interface Framework | DPUs are starting to become mainstream devices in Edge, Cloud, and Data Center environments and unlike the previous generation of accelerators and SmartNICs, DPUs present an opportunity to rethink the traditional deployment architectures.  Multiple vendors are developing a variety of interfaces and frameworks that are highly platform dependent, resulting in the potential for complex and isolated deployments.  Discover the need for a common interface framework for the DPU ecosystem and how a vendor agnostic approach, built on existing industry APIs and new API definitions, simplifies the creation of DPU based solutions. |
-| Tue Mar 15, 9:30am-10:00am PDT | Nicolas Viljoen, Meta | Coming soon | Coming soon |
+| Tue Mar 15, 9:30am-10:00am PDT | Nicolas Viljoen, Meta | AI Training Clusters: Challenges @ DC Scale | AI training is scaling rapidly both in model size & complexity. In this talk we will provide an insight into how this problem is solved today within Meta’s infrastructure as well as the upcoming challenges we see. Finally we will lay out some opportunities for HW/SW co-design & thoughts about how to enable OPI to tackle these problems. |
 | Tue Mar 15, 10:00am-10:30am PDT | Muli Ben-Yehuda, Lightbits | Data Access in an Open Programmable Infrastructure World | Data Access in an Open Programmable Infrastructure World |
 | Tue Mar 15, 10:45am-11:15am PDT | Debo Dutta, Nutanix | MLOps Meets Programmable Infrastructure | AI/ML driven insights can accelerate the digital transformation of the enterprise. MLOps manages the lifecycle of AI/ML at a higher level e.g., workflows for model training, serving, tuning etc. and is typically unaware of the infrastructure layers in a multi-cloud world. How can we consistently execute such workflows on programmable and accelerated infrastructure? In this talk, we show how MLOps workflows can be specified on top of Kubernetes and discuss performance optimization of the same. In addition, we discuss new directions in machine learning that could benefit from such programmable infrastructure. |
 | Tue Mar 15, 11:15am-11:45am PDT | Ian Wells, Cisco | How Programmable Infrastructure Can Enable Better Edge Computing | Edge Computing has become a hot topic recently. This talk will level set on what Edge Computing is, and then present a world where programmable infrastructure can make edge computing better. The talk will provide the programmable infrastructure community an opportunity to build software for this use case. |
 | Tue Mar 15, 11:45am-12:15pm PDT | Tim Michels, F5 | DPU Disruption of Today’s Infrastructure Paradigm | Explore with F5 the exciting potential for DPU technology to bring disruptive change to the infrastructure and topology of the data center, private cloud, or edge deployments of the future.  Learn to define what a DPU is, how it can be used to separate infrastructure services from application workloads, and why this is so important.  Hear the call to action to drive this technology into the future by creating an open community engaged in the definition of frameworks and APIs targeting vendor-agnostic interoperability. |
-| Tue Mar 15, 12:30pm-1:00pm PDT | Pere Monclus & Ben Pfaff, VMware | Programmability and Composability for an e2e Networking Evolution | Programmability and Composability for an e2e Networking Evolution |
+| Tue Mar 15, 12:30pm-1:00pm PDT | Pere Monclus & Ben Pfaff, VMware | Programmability and Composability for an e2e Networking Evolution |  In this talk, Pere and Ben will discuss the evolution of networking, programmability and technology, the needs of programmable infrastructure and how composable infrastructure and standard interfaces can support open ecosystems. |
 | Tue Mar 15, 1:00pm-1:30pm PDT | Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5) | Next Steps in Community Building/Evolution | We will talk about where OPI goes next in terms of it's community governance. |
 | Wed Mar 16, 8:00am-8:45am PDT | Denis Kennelly and Vinent Hsu, IBM | Keynote | The perfect storm of infrastructure modernization is here. An organization needs to gain the immediate insights of the ever-growing data estates, protect its assets from cyberattack and enable developers to develop solutions more efficiently and globally. The traditional infrastructure can no longer satisfy the new requirements. We need a new intelligent infrastructure that is more elastic, more secure, and more efficient. Developers can now leverage DPU/IPU/SmartNic technology to modernize its infrastructure – compute, network and storage. In this session, IBM will present its vision of infrastructure evolution and the possible applications and services that can take advantage of this technology. |
 | Wed Mar 16, 8:45am-9:15am PDT | Tomas Fredberg, Ericsson | Telco needs of IPDK, Cloud, HW, and SW suppliers | Telco needs of IPDK, Cloud, HW, and SW suppliers |
