--- a/content/posts/2022-02-22-opi-event.md
+++ b/content/posts/2022-02-22-opi-event.md
@@ -100,9 +100,9 @@ tbody tr:nth-child(even) {
 | Day/Time | Speaker | Title | Abstract |
 |-----|---------|-------|----------|
 | Tue Mar 15, 8:00am-8:15am PDT | Intel | Introduction |  |
-| Tue Mar 15, 8:15am-9:00am PDT | Google | Coming soon | Coming soon |
+| Tue Mar 15, 8:15am-9:00am PDT | Nicolas Viljoen, Meta | Keynote: AI Training Clusters: Challenges @ DC Scale | AI training is scaling rapidly both in model size & complexity. In this talk we will provide an insight into how this problem is solved today within Meta’s infrastructure as well as the upcoming challenges we see. Finally we will lay out some opportunities for HW/SW co-design & thoughts about how to enable OPI to tackle these problems. |
 | Tue Mar 15, 9:00am-9:30am PDT | Mark Sanders, Dell | DPU Open API – The need for a Common Interface Framework | DPUs are starting to become mainstream devices in Edge, Cloud, and Data Center environments and unlike the previous generation of accelerators and SmartNICs, DPUs present an opportunity to rethink the traditional deployment architectures.  Multiple vendors are developing a variety of interfaces and frameworks that are highly platform dependent, resulting in the potential for complex and isolated deployments.  Discover the need for a common interface framework for the DPU ecosystem and how a vendor agnostic approach, built on existing industry APIs and new API definitions, simplifies the creation of DPU based solutions. |
-| Tue Mar 15, 9:30am-10:00am PDT | Nicolas Viljoen, Meta | AI Training Clusters: Challenges @ DC Scale | AI training is scaling rapidly both in model size & complexity. In this talk we will provide an insight into how this problem is solved today within Meta’s infrastructure as well as the upcoming challenges we see. Finally we will lay out some opportunities for HW/SW co-design & thoughts about how to enable OPI to tackle these problems. |
+| Tue Mar 15, 9:30am-10:00am PDT | Dan Daly, Intel | IPDK and its role in enabling Open Programmable Infrastructure | Infrastructure Programmer Development Kit (IPDK) is an open source, vendor agnostic framework of drivers and APIs for infrastructure offload and management that runs on a CPU, IPU, DPU or switch.  IPDK’s role in a broader open eco-system is meant to be an open-source development effort for finding common APIs across devices and components within the infrastructure, as well as finding common control plane frameworks for orchestration.  In this talk we’ll give an update as to where we are in this effort, where we are going and how we want to integrate the direction and governance of IPDK under the umbrella of Open Programmable Infrastructure. |
 | Tue Mar 15, 10:00am-10:30am PDT | Muli Ben-Yehuda, Lightbits | Data Access in an Open Programmable Infrastructure World | Data Access in an Open Programmable Infrastructure World |
 | Tue Mar 15, 10:45am-11:15am PDT | Debo Dutta, Nutanix | MLOps Meets Programmable Infrastructure | AI/ML driven insights can accelerate the digital transformation of the enterprise. MLOps manages the lifecycle of AI/ML at a higher level e.g., workflows for model training, serving, tuning etc. and is typically unaware of the infrastructure layers in a multi-cloud world. How can we consistently execute such workflows on programmable and accelerated infrastructure? In this talk, we show how MLOps workflows can be specified on top of Kubernetes and discuss performance optimization of the same. In addition, we discuss new directions in machine learning that could benefit from such programmable infrastructure. |
 | Tue Mar 15, 11:15am-11:45am PDT | Ian Wells, Cisco | How Programmable Infrastructure Can Enable Better Edge Computing | Edge Computing has become a hot topic recently. This talk will level set on what Edge Computing is, and then present a world where programmable infrastructure can make edge computing better. The talk will provide the programmable infrastructure community an opportunity to build software for this use case. |
