--- a/content/posts/2022-03-18-opi-event.md
+++ b/content/posts/2022-03-18-opi-event.md
@@ -20,7 +20,7 @@ videos and slides.
 ## OPIEvent - D/IPU Open API, The need for a Common Interface Framework - Dell Mark Sanders
 
 {{< youtube lONRPj19-PA >}}
-[D/IPU Open API, The need for a Common Interface Framework](presentations/OPI_Event_Dell_Mark_Sanders.pdf)
+[D/IPU Open API, The need for a Common Interface Framework Slides](/presentations/OPI_Event_Dell_Mark_Sanders.pdf)
 
 ## OPI Event - IPDK and its role in enabling Open Programmable Infrastructure - Dan Daly
 
@@ -29,7 +29,7 @@ videos and slides.
 ## OPIEvent - Data Access in an Open Prog. Infra. World - LightBits - Muli Ben-Yehuda
 
 {{< youtube UmhbUvcRUwM >}}
-[Data Access in an Open Prog. Infra. World](presentations/OPI_Event_Lightbits_Muli_BenYehuda.pdf)
+[Data Access in an Open Prog. Infra. World Slides](/presentations/OPI_Event_Lightbits_Muli_BenYehuda.pdf)
 
 ## OPIEvent - MLOps Meets Programmable Infrastructure - Nutanix - Debo Dutta
 
@@ -60,12 +60,12 @@ videos and slides.
 ## OPI Event Day 2 Keynote - IBM - Denis Kennelly, Vincent Hsu
 
 {{< youtube I9yU9sshTpQ >}}
-[OPI Event Day 2 Keynote - IBM](presentations/OPI_Event_IBM_Keynote\ Denis_Vincent.pdf)
+[OPI Event Day 2 Keynote - IBM Slides](/presentations/OPI_Event_IBM_Keynote_Denis_Vincent.pdf)
 
 ## OPI Event - Telco needs of IPDK, Cloud, HW, and SW suppliers - Ericsson Tomas Fredberg
 
 {{< youtube pl2cR6gfc0A >}}
-[Telco needs of IPDK, Cloud, HW, and SW suppliers](presentations/OPI_Event_Ericsson_Tomas_Fredberg.pdf)
+[Telco needs of IPDK, Cloud, HW, and SW suppliers Slides](/presentations/OPI_Event_Ericsson_Tomas_Fredberg.pdf)
 
 ## OPI Event - The Importance of Testing In Your Open Source Infra - Spirent - Tom Nadeau
 
@@ -80,7 +80,7 @@ videos and slides.
 ## OPI Event - The Importance of Hybrid Cloud + OPI - Red Hat - Kris Murphy, Billy McFall
 
 {{< youtube 3kDAZK29wco >}}
-[The Importance of Hybrid Cloud + OPI](/presentations/OPI_Event_Red Hat_Kris_Billy.pdf)
+[The Importance of Hybrid Cloud + OPI Slides](/presentations/OPI_Event_Red_Hat_Kris_Billy.pdf)
 
 ## OPI Event - Target Abstraction Breakout - Marvell, Intel
 
@@ -94,14 +94,10 @@ videos and slides.
 ## OPI Event - Lifecycle Breakout - Kris Murphy (Red Hat) Mark Sanders, Boris Glimcher (Dell)
 
 {{< youtube dFjxDXTxgxg >}}
-[Lifecycle Breakout](presentations/OPI_Event_Breakout3_Lifecycle_API_Prov_Mgt.pdf)
-
-## OPI Event - Lifecycle Breakout - Kris Murphy (Red Hat) Mark Sanders, Boris Glimcher (Dell)
-
-{{< youtube dFjxDXTxgxg >}}
+[Lifecycle Breakout Slides](/presentations/OPI_Event_Breakout3_Lifecycle_API_Prov_Mgt.pdf)
 
 ## OPI Event Closing - Kyle Mestery (Intel), Kris Murphy (Red Hat), Paul Pindell (F5)
 
 {{< youtube BnzWDIZEywI >}}
-[Closing Thoughts Slides[(presentations/OPI_Event_Closing_thoughts.pdf)
+[Closing Thoughts Slides](/presentations/OPI_Event_Closing_thoughts.pdf)
 
