Add Nutanix slides from Debo Dutta
Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/content/posts/2022-03-18-opi-event.md
+++ b/content/posts/2022-03-18-opi-event.md
@@ -34,6 +34,7 @@ videos and slides.
 ## OPIEvent - MLOps Meets Programmable Infrastructure - Nutanix - Debo Dutta
 
 {{< youtube pLfh0S0XpTE >}}
+[MLOps Meets Programmable Infrastructure Slides](/presentations/OPI_Event_Nutanix_Debo.pdf)
 
 ## OPIEvent - How Prog. Infra. Can Enable Better Edge Computing - Cisco - Ian Wells
 
