Add slides from Nic Viljoen
Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/content/posts/2022-03-18-opi-event.md
+++ b/content/posts/2022-03-18-opi-event.md
@@ -17,6 +17,7 @@ videos and slides.
 ## OPI Event Keynote: AI Training Clusters: Challenges @ DC Scale - Meta - Nic Viljoen
 
 {{< youtube wew6in1i8kc >}}
+[AI Training Clusters: Challenges @ DC Scale Slides](/presentations/OPI_Event_Meta_Nic_Viljoen.pdf)
 
 ## OPIEvent - D/IPU Open API, The need for a Common Interface Framework - Dell Mark Sanders
 
